--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -19,3 +19,39 @@
   year={2003},
   publisher={Oxford University Press}
 }
+
+@article{preisser2008finite,
+  title={Finite sample adjustments in estimating equations and covariance estimators for intracluster correlations},
+  author={Preisser, John S and Lu, Bing and Qaqish, Bahjat F},
+  journal={Statistics in medicine},
+  volume={27},
+  number={27},
+  pages={5764--5785},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{li2018sample,
+  title={Sample size determination for GEE analyses of stepped wedge cluster randomized trials},
+  author={Li, Fan and Turner, Elizabeth L and Preisser, John S},
+  journal={Biometrics},
+  volume={74},
+  number={4},
+  pages={1450--1458},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{kxaa056,
+    author = {Li, Fan and Yu, Hengshi and Rathouz, Paul J and Turner, Elizabeth L and Preisser, John S},
+    title = "{Marginal modeling of cluster-period means and intraclass correlations in stepped wedge designs with binary outcomes}",
+    journal = {Biostatistics},
+    year = {2021},
+    month = {02},
+    issn = {1465-4644},
+    doi = {10.1093/biostatistics/kxaa056},
+    url = {https://doi.org/10.1093/biostatistics/kxaa056},
+    note = {kxaa056},
+    eprint = {https://academic.oup.com/biostatistics/advance-article-pdf/doi/10.1093/biostatistics/kxaa056/36170371/kxaa056.pdf},
+}
+
