--- a/vignettes/geeCRT.Rmd
+++ b/vignettes/geeCRT.Rmd
@@ -23,24 +23,25 @@ Population-averaged models have been increasingly used in the design and analysi
 
 Despite the general GEE/MAEE approach, we also implement a fast cluster-period GEE method specifically for stepped wedge CRTs with large and variable cluster-period sizes. The individual-level GEE/MAEE approach becomes computationally infeasible in this setting due to inversion of high-dimensional covariance matrices and the enumeration of a high-dimensional design matrix for the correlation estimation equations. The package gives a simple and efficient estimating equations approach based on the cluster-period means to estimate the intervention effects as well as correlation parameters.
 
-In addition, the package also provides functions for generating correlated binary data with specific mean vector and correlation matrix based on the multivariate probit method [@emrich1991method] or the conditional linear family method ([@qaqish2003family]). These two functions facilitate generating correlated binary data in future simulation studies. 
+In addition, the package also provides functions for generating correlated binary data with specific mean vector and correlation matrix based on the multivariate probit method [@emrich1991method] or the conditional linear family method [@qaqish2003family]. These two functions facilitate generating correlated binary data in future simulation studies. 
 
-## `geemaee()` example: matrix-adjusted GEE for estimating the mean and correlation parameters in CRTs
+## `geemaee()` examples: matrix-adjusted GEE for estimating the mean and correlation parameters in SW-CRTs
 
 The `geemaee()` function implements the matrix-adjusted GEE or regular GEE developed for analyzing cluster randomized trials (CRTs). It provides valid estimation and inference for the treatment effect and intraclass correlation parameters within the population-averaged modeling framework. The program allows for flexible marginal mean model specifications. The program also offers bias-corrected intraclass correlation coefficient (ICC) estimates as well as bias-corrected sandwich variances for both the treatment effect parameter and the ICC parameters. The technical details of the matrix-adjusted GEE approach are provided in [@preisser2008finite] and [@li2018sample].
 
 For the individual-level data, we use the `geemaee()` function to estimate the marginal mean and correlation parameters in CRTs. We use two simulated stepped wedge CRT datasets with true nested exchangeable correlation structure to illustrate the `geemaee()` function examples. 
 
-### Simulated dataset with 12 clusters and 4 periods.
+### Simulated dataset with 12 clusters and 4 periods
 
 ```{r, echo=FALSE, results='asis'}
 knitr::kable(head(sampleSWCRTSmall))
 ```
 
-We first create an auxiliary function `createzCrossSec()` to help create the design matrix for the estimating equations of the correlation parameters. We then collect design matrix `X` for the mean parameters with five period indicators and the treatment indicator.
+We first create an auxiliary function `createzCrossSec()` to help create the design matrix for the estimating equations of the correlation parameters assuming that the correlations follow a nested exchangeable structure. We then collect design matrix `X` for the mean parameters with five period indicators and the treatment indicator.
 
 ```{r createz, fig.keep="all", fig.width = 7, fig.height=4}
 
+# Z matrix for nested exchangeable correlation structure
 createzCrossSec = function (m) {
 
     Z = NULL
@@ -73,11 +74,13 @@ createzCrossSec = function (m) {
     return(Z)}
 ``` 
 
-We implement the `geemaee()` function on both the continuous outcome and binary outcome, and consider both matrix-adjusted estimating equations (MAEE) with `alpadj = TRUE` and uncorrected generalized estimating equations (GEE) with `alpadj = FALSE`. For the `shrink` argument, we use the `"ALPHA"` method to tune step sizes and focus on using estimated variances in the correlation estimating equations rather than using unit variances by specifying `makevone = FALSE`. 
+We implement the `geemaee()` function on both the continuous outcome and binary outcome using the nested exchangeable correlation structure, and consider both matrix-adjusted estimating equations (MAEE) with `alpadj = TRUE` and uncorrected generalized estimating equations (GEE) with `alpadj = FALSE`. For the `shrink` argument, we use the `"ALPHA"` method to tune step sizes and focus on using estimated variances in the correlation estimating equations rather than using unit variances by specifying `makevone = FALSE`. 
 
 
 ```{r geemaee_small, fig.keep="all", fig.width = 7, fig.height=4}
-
+########################################################################
+### Example 1): simulated SW-CRT with small cluster-period sizes (5~10)
+########################################################################
 sampleSWCRT = sampleSWCRTSmall
 
 ### Individual-level id, period, outcome, and design matrix
@@ -89,7 +92,7 @@ m = as.matrix(table(id, period)); n = dim(m)[1]; t = dim(m)[2]
 Z = createzCrossSec(m) 
 
 ### (1) Matrix-adjusted estimating equations and GEE 
-### on continous outcome with nested exchangeable correlation structure
+### on continuous outcome with nested exchangeable correlation structure
  
 ### MAEE
 est_maee_ind_con = geemaee(y = sampleSWCRT$y_con, 
@@ -117,7 +120,6 @@ est_maee_ind_bin = geemaee(y = sampleSWCRT$y_bin,
                            maxiter = 500, epsilon = 0.001, 
                            printrange = TRUE, alpadj = TRUE, 
                            shrink = "ALPHA", makevone = FALSE)
-print(est_maee_ind_bin)
 
 ### GEE
 est_uee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
@@ -150,6 +152,87 @@ options(width = 100)
 
 ```
 
+
+We also consider the simple exchangeable correlation structure for the cluster-period responses, where we specify the `Z` matrix as a single column of 1's. We implement the `geemaee()` function on both the continuous outcome and binary outcome, and consider both matrix-adjusted estimating equations (MAEE) with `alpadj = TRUE` and uncorrected generalized estimating equations (GEE) with `alpadj = FALSE`. For the `shrink` argument, we use the `"ALPHA"` method to tune step sizes and focus on using estimated variances in the correlation estimating equations rather than using unit variances by specifying `makevone = FALSE`. 
+
+
+```{r geemaee_small_exc, fig.keep="all", fig.width = 7, fig.height=4}
+
+sampleSWCRT = sampleSWCRTSmall
+
+### Individual-level id, period, outcome, and design matrix
+id = sampleSWCRT$id; period = sampleSWCRT$period;
+X = as.matrix(sampleSWCRT[, c('period1', 'period2', 'period3', 'period4', 'treatment')])
+m = as.matrix(table(id, period)); n = dim(m)[1]; t = dim(m)[2]
+
+### design matrix for correlation parameters (simple exchangeable correlation structure)
+Z = createzCrossSec(m) 
+Z = matrix(1, dim(Z)[1], 1)
+
+### (1) Matrix-adjusted estimating equations and GEE 
+### on continuous outcome with nested exchangeable correlation structure
+ 
+### MAEE
+est_maee_ind_con = geemaee(y = sampleSWCRT$y_con, 
+                           X = X, id  = id, Z = Z, 
+                           family = "continuous", 
+                           maxiter = 500, epsilon = 0.001, 
+                           printrange = TRUE, alpadj = TRUE, 
+                           shrink = "ALPHA", makevone = FALSE)
+
+### GEE
+est_uee_ind_con = geemaee(y = sampleSWCRT$y_con, 
+                          X = X, id = id, Z = Z, 
+                          family = "continuous", 
+                          maxiter = 500, epsilon = 0.001, 
+                          printrange = TRUE, alpadj = FALSE, 
+                          shrink = "ALPHA", makevone = FALSE)
+
+### (2) Matrix-adjusted estimating equations and GEE 
+### on binary outcome with nested exchangeable correlation structure
+
+### MAEE
+est_maee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
+                           X = X, id = id, Z = Z, 
+                           family = "binomial", 
+                           maxiter = 500, epsilon = 0.001, 
+                           printrange = TRUE, alpadj = TRUE, 
+                           shrink = "ALPHA", makevone = FALSE)
+
+
+### GEE
+est_uee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
+                          X = X, id = id, Z = Z, 
+                          family = "binomial", 
+                          maxiter = 500, epsilon = 0.001, 
+                          printrange = TRUE, alpadj = FALSE, 
+                          shrink = "ALPHA", makevone = FALSE)
+
+```
+
+Then we have the following output: 
+```{r set-options2, echo=FALSE, fig.keep="all", fig.width = 7, fig.height=4}
+options(width = 100)
+ 
+```
+
+```{r , fig.keep="all", fig.width = 7, fig.height=4}
+ # MAEE for continuous outcome
+ print(est_maee_ind_con)
+
+ # GEE for continuous outcome
+ print(est_uee_ind_con)
+ 
+ # MAEE for binary outcome
+ print(est_maee_ind_bin)
+ 
+ # GEE for binary outcome
+ print(est_uee_ind_bin)
+
+```
+
+
+
 ### Simulated dataset with 12 clusters and 5 periods
 
 
@@ -157,11 +240,12 @@ options(width = 100)
 knitr::kable(head(sampleSWCRTLarge))
 ```
 
+Using the nested exchangeable correlation structure, we have the following results.
 ```{r geemaee_large, fig.keep="all", fig.width = 7, fig.height=4}
-
 ########################################################################
 ### Example 2): simulated SW-CRT with larger cluster-period sizes (20~30)
 ########################################################################
+
 ## This will elapse longer. 
 sampleSWCRT = sampleSWCRTLarge
 
@@ -217,12 +301,276 @@ print(est_uee_ind_bin)
 
 ```
 
+Using the simple exchangeable correlation structure, we have the following results.
+```{r geemaee_large_exc, fig.keep="all", fig.width = 7, fig.height=4}
 
-## `cpgeeSWD()` example: cluster-period GEE for estimating the marginal mean and correlation parameters in cross-sectional SW-CRTs
+sampleSWCRT = sampleSWCRTLarge
 
-The `cpgeeSWD()` function implements the cluster-period GEE developed for cross-sectional stepped wedge cluster randomized trials (SW-CRTs). It provides valid estimation and inference for the treatment effect and intraclass correlation parameters within the GEE framework, and is computationally efficient for analyzing SW-CRTs with large cluster sizes. The program currently only allows for a marginal mean model with discrete period effects and the intervention indicator without additional covariates. The program offers bias-corrected ICC estimates as well as bias-corrected sandwich variances for both the treatment effect parameter and the ICC parameters. The technical details of the cluster-period GEE approach are provided in [@kxaa056].
+### Individual-level id, period, outcome, and design matrix
+id = sampleSWCRT$id; period =  sampleSWCRT$period;
+X = as.matrix(sampleSWCRT[, c('period1', 'period2', 'period3', 'period4', 'period5', 'treatment')])
+m = as.matrix(table(id, period)); n = dim(m)[1]; t = dim(m)[2]
+### design matrix for correlation parameters
+Z = createzCrossSec(m) 
+Z = matrix(1, dim(Z)[1], 1)
 
-### Simulated dataset with 12 clusters and 4 periods.
+### (1) Matrix-adjusted estimating equations and GEE 
+### on continous outcome with nested exchangeable correlation structure
+ 
+### MAEE
+est_maee_ind_con = geemaee(y = sampleSWCRT$y_con, 
+                           X = X, id  = id, Z = Z, 
+                           family = "continuous", 
+                           maxiter = 500, epsilon = 0.001, 
+                           printrange = TRUE, alpadj = TRUE, 
+                           shrink = "ALPHA", makevone = FALSE)
+print(est_maee_ind_con)
+
+### GEE
+est_uee_ind_con = geemaee(y = sampleSWCRT$y_con, 
+                          X = X, id = id, Z = Z, 
+                          family = "continuous", 
+                          maxiter = 500, epsilon = 0.001, 
+                          printrange = TRUE, alpadj = FALSE, 
+                          shrink = "ALPHA", makevone = FALSE)
+print(est_uee_ind_con)
+
+### (2) Matrix-adjusted estimating equations and GEE 
+### on binary outcome with nested exchangeable correlation structure
+
+### MAEE
+est_maee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
+                           X = X, id = id, Z = Z, 
+                           family = "binomial", 
+                           maxiter = 500, epsilon = 0.001, 
+                           printrange = TRUE, alpadj = TRUE, 
+                           shrink = "ALPHA", makevone = FALSE)
+print(est_maee_ind_bin)
+
+### GEE
+est_uee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
+                          X = X, id = id, Z = Z, 
+                          family = "binomial", 
+                          maxiter = 500, epsilon = 0.001, 
+                          printrange = TRUE, alpadj = FALSE, 
+                          shrink = "ALPHA", makevone = FALSE)
+print(est_uee_ind_bin)
+```
+
+
+## `geemaee()` examples: matrix-adjusted GEE for estimating the mean and correlation parameters in general CRTs
+
+We can also use the `geemaee()` function for general CRTs with only one time period. We need to specify a single column of 1's for the `Z` matrix. 
+
+### Simulated dataset with 12 clusters and small cluster sizes
+
+```{r geemaee_small_crt, fig.keep="all", fig.width = 7, fig.height=4}
+### use only the second period data to get a general CRT data
+sampleSWCRT = sampleSWCRTSmall[sampleSWCRTSmall$period == 2, ] 
+
+### Individual-level id, period, outcome, and design matrix
+id = sampleSWCRT$id; period =  sampleSWCRT$period;
+X = as.matrix(sampleSWCRT[, c('period2', 'treatment')])
+m = as.matrix(table(id, period)); n = dim(m)[1]; t = dim(m)[2]
+
+### design matrix for correlation parameters
+Z = createzCrossSec(m)
+Z = matrix(1, dim(Z)[1], 1)
+
+### (1) Matrix-adjusted estimating equations and GEE 
+### on continuous outcome with nested exchangeable correlation structure
+ 
+### MAEE
+est_maee_ind_con = geemaee(y = sampleSWCRT$y_con, 
+                           X = X, id  = id, Z = Z, 
+                           family = "continuous", 
+                           maxiter = 500, epsilon = 0.001, 
+                           printrange = TRUE, alpadj = TRUE, 
+                           shrink = "ALPHA", makevone = FALSE)
+
+### GEE
+est_uee_ind_con = geemaee(y = sampleSWCRT$y_con, 
+                          X = X, id = id, Z = Z, 
+                          family = "continuous", 
+                          maxiter = 500, epsilon = 0.001, 
+                          printrange = TRUE, alpadj = FALSE, 
+                          shrink = "ALPHA", makevone = FALSE)
+
+### (2) Matrix-adjusted estimating equations and GEE 
+### on binary outcome with nested exchangeable correlation structure
+
+### MAEE
+est_maee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
+                           X = X, id = id, Z = Z, 
+                           family = "binomial", 
+                           maxiter = 500, epsilon = 0.001, 
+                           printrange = TRUE, alpadj = TRUE, 
+                           shrink = "ALPHA", makevone = FALSE)
+
+### GEE
+est_uee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
+                          X = X, id = id, Z = Z, 
+                          family = "binomial", 
+                          maxiter = 500, epsilon = 0.001, 
+                          printrange = TRUE, alpadj = FALSE, 
+                          shrink = "ALPHA", makevone = FALSE)
+```
+
+
+Then we have the following output: 
+```{r set-options3, echo=FALSE, fig.keep="all", fig.width = 7, fig.height=4}
+options(width = 100)
+ 
+```
+
+```{r , fig.keep="all", fig.width = 7, fig.height=4}
+ # MAEE for continuous outcome
+ print(est_maee_ind_con)
+
+ # GEE for continuous outcome
+ print(est_uee_ind_con)
+ 
+ # MAEE for binary outcome
+ print(est_maee_ind_bin)
+ 
+ # GEE for binary outcome
+ print(est_uee_ind_bin)
+
+```
+
+
+### Simulated dataset with 12 clusters and large cluster sizes
+
+```{r geemaee_large_crt, fig.keep="all", fig.width = 7, fig.height=4}
+
+### use only the second period data to get a general CRT data
+sampleSWCRT = sampleSWCRTLarge[sampleSWCRTLarge$period == 2, ]
+
+### Individual-level id, period, outcome, and design matrix
+id = sampleSWCRT$id; period =  sampleSWCRT$period;
+X = as.matrix(sampleSWCRT[, c('period2', 'treatment')])
+m = as.matrix(table(id, period)); n = dim(m)[1]; t = dim(m)[2]
+### design matrix for correlation parameters
+Z = createzCrossSec(m) 
+Z = matrix(1, dim(Z)[1], 1)
+
+### (1) Matrix-adjusted estimating equations and GEE 
+### on continous outcome with nested exchangeable correlation structure
+ 
+### MAEE
+est_maee_ind_con = geemaee(y = sampleSWCRT$y_con, 
+                           X = X, id  = id, Z = Z, 
+                           family = "continuous", 
+                           maxiter = 500, epsilon = 0.001, 
+                           printrange = TRUE, alpadj = TRUE, 
+                           shrink = "ALPHA", makevone = FALSE)
+print(est_maee_ind_con)
+
+### GEE
+est_uee_ind_con = geemaee(y = sampleSWCRT$y_con, 
+                          X = X, id = id, Z = Z, 
+                          family = "continuous", 
+                          maxiter = 500, epsilon = 0.001, 
+                          printrange = TRUE, alpadj = FALSE, 
+                          shrink = "ALPHA", makevone = FALSE)
+print(est_uee_ind_con)
+
+### (2) Matrix-adjusted estimating equations and GEE 
+### on binary outcome with nested exchangeable correlation structure
+
+### MAEE
+est_maee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
+                           X = X, id = id, Z = Z, 
+                           family = "binomial", 
+                           maxiter = 500, epsilon = 0.001, 
+                           printrange = TRUE, alpadj = TRUE, 
+                           shrink = "ALPHA", makevone = FALSE)
+print(est_maee_ind_bin)
+
+### GEE
+est_uee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
+                          X = X, id = id, Z = Z, 
+                          family = "binomial", 
+                          maxiter = 500, epsilon = 0.001, 
+                          printrange = TRUE, alpadj = FALSE, 
+                          shrink = "ALPHA", makevone = FALSE)
+print(est_uee_ind_bin)
+```
+
+## `geemaee()` examples: matrix-adjusted GEE for estimating the mean and correlation parameters in SW-CRTs with all cluster-period sizes being 1
+
+We consider an edge case when all cluster period sizes are 1, the `geemaee()` function can still estimate the intra-period correlation parameter.
+
+
+```{r geemaee_large_cpsize1, fig.keep="all", fig.width = 7, fig.height=4}
+### Simulated dataset with 12 clusters and 5 periods
+# use the first observation for each cluster-period combination
+sampleSWCRT = NULL
+for (i in 1:12) {
+  for (j in 1:5) {
+    row = sampleSWCRTLarge[sampleSWCRTLarge$id == i & 
+                             sampleSWCRTLarge$period == j, ][1, , drop = FALSE]
+    sampleSWCRT  = rbind(sampleSWCRT, row)
+  }
+}
+
+### Individual-level id, period, outcome, and design matrix
+id = sampleSWCRT$id; period =  sampleSWCRT$period;
+X = as.matrix(sampleSWCRT[, c('period2', 'treatment')])
+m = as.matrix(table(id, period)); n = dim(m)[1]; t = dim(m)[2]
+### design matrix for correlation parameters
+Z = createzCrossSec(m) 
+Z = matrix(1, dim(Z)[1], 1)
+
+### (1) Matrix-adjusted estimating equations and GEE 
+### on continous outcome with nested exchangeable correlation structure
+ 
+### MAEE
+est_maee_ind_con = geemaee(y = sampleSWCRT$y_con, 
+                           X = X, id  = id, Z = Z, 
+                           family = "continuous", 
+                           maxiter = 500, epsilon = 0.001, 
+                           printrange = TRUE, alpadj = TRUE, 
+                           shrink = "ALPHA", makevone = FALSE)
+print(est_maee_ind_con)
+
+### GEE
+est_uee_ind_con = geemaee(y = sampleSWCRT$y_con, 
+                          X = X, id = id, Z = Z, 
+                          family = "continuous", 
+                          maxiter = 500, epsilon = 0.001, 
+                          printrange = TRUE, alpadj = FALSE, 
+                          shrink = "ALPHA", makevone = FALSE)
+print(est_uee_ind_con)
+
+### (2) Matrix-adjusted estimating equations and GEE 
+### on binary outcome with nested exchangeable correlation structure
+
+### MAEE
+est_maee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
+                           X = X, id = id, Z = Z, 
+                           family = "binomial", 
+                           maxiter = 500, epsilon = 0.001, 
+                           printrange = TRUE, alpadj = TRUE, 
+                           shrink = "ALPHA", makevone = FALSE)
+print(est_maee_ind_bin)
+
+### GEE
+est_uee_ind_bin = geemaee(y = sampleSWCRT$y_bin, 
+                          X = X, id = id, Z = Z, 
+                          family = "binomial", 
+                          maxiter = 500, epsilon = 0.001, 
+                          printrange = TRUE, alpadj = FALSE, 
+                          shrink = "ALPHA", makevone = FALSE)
+print(est_uee_ind_bin)
+```
+
+
+## `cpgeeSWD()` examples: cluster-period GEE for estimating the marginal mean and correlation parameters in cross-sectional SW-CRTs
+
+The `cpgeeSWD()` function implements the cluster-period GEE developed for cross-sectional stepped wedge cluster randomized trials (SW-CRTs). It provides valid estimation and inference for the treatment effect and intraclass correlation parameters within the GEE framework, and is computationally efficient for analyzing SW-CRTs with large cluster sizes. The program currently only allows for a marginal mean model with discrete period effects and the intervention indicator without additional covariates. The program offers bias-corrected ICC estimates as well as bias-corrected sandwich variances for both the treatment effect parameter and the ICC parameters. The technical details of the cluster-period GEE approach are provided in [@li2022marginal].
+
+### Simulated dataset with 12 clusters and 4 periods
 
 We summarize the individual-level simulated SW-CRT data to cluster-period data and use the `cpgeeSWD()` function to estimate the marginal mean and correlation parameters on cluster-period means of binary outcome. We first transform the variables to get the cluster-period mean outcome `y_cp`, mean parameters' design matrix `X_cp` as well as other arguments.  
 
@@ -381,7 +729,7 @@ print(est_uee_ed)
 ```
 ## `simbinPROBIT()` example: generating correlated binary data using the multivariate probit method
 
-The `simbinPROBIT()` function generates correlated binary data using the multivariate Probit method ([@emrich1991method]). It simulates a vector of binary outcomes according the specified marginal mean vector and correlation structure. Constraints and compatibility between the marginal mean and correlation matrix are checked.
+The `simbinPROBIT()` function generates correlated binary data using the multivariate Probit method [@emrich1991method]. It simulates a vector of binary outcomes according the specified marginal mean vector and correlation structure. Constraints and compatibility between the marginal mean and correlation matrix are checked.
 
 We use the `simbinPROBIT()` function to generate correlated binary data with different correlation structures. We consider simulating a cross-sectional SW-CRT dataset with 2 clusters, 3 periods with the same cluster-period size of 5. We use two mean vectors for the two clusters and specify the `mu` argument.  
 
@@ -454,7 +802,7 @@ y_ed = simbinPROBIT(mu = mu, Sigma = Sigma, n = n)
 
 ## `simbinCLF()` example: generating correlated binary data using the conditional linear family method
 
-The `simbinCLF()` function generates correlated binary data using the conditional linear family method ([@qaqish2003family]). It simulates a vector of binary outcomes according the specified marginal mean vector and correlation structure. Natural constraints and compatibility between the marginal mean and correlation matrix are checked.
+The `simbinCLF()` function generates correlated binary data using the conditional linear family method [@qaqish2003family]. It simulates a vector of binary outcomes according the specified marginal mean vector and correlation structure. Natural constraints and compatibility between the marginal mean and correlation matrix are checked.
 
 We use the `simbinCLF()` function to generate correlated binary data with different correlation structures. We consider simulating a cross-sectional SW-CRT dataset with 2 clusters, 3 periods with the same cluster-period size of 5. We use two mean vectors for the two clusters and specify the `mu` argument.  
 
